# Lattice

./: .gitignore  Lattice.ioc  README.md
Documents/: lattice.blg  lattice.tex
HMI/: Lattice.HMI
Manual/: biblio.bib  report.aux  report.tex
PSpice/: WaveUltrasonicOutputStage-v1.1.asc  WaveUltrasonicOutputStage.asc
Simulations/: WaveUltrasonicOutputStage - Peaking.asc  WaveUltrasonicOutputStage-v1.2.asc
Software/: config.json
Software/Lattice/: core.py  parser.py  tests.py
Unit tests/phasorsignal/: CMakeLists.txt
Unit tests/phasorsignal/tests/: CMakeLists.txt  test.cpp
Unit tests/pid/: CMakeLists.txt
Unit tests/regression/: CMakeLists.txt
Unit tests/regression/regression/inc/: global.h  matrix.h  polyreg.h
Unit tests/regression/regression/src/: matrix.c  polyreg.c
Unit tests/regression/tests/: CMakeLists.txt  test.cpp
v1.0/Firmware/: .mxproject  Firmware.ioc  Makefile  Makefile.backup  lattice.code-workspace
v1.0/Hardware/: BOM.xlsx  HBridge.kicad_sch-bak  IsensAfe.kicad_sch  IsensAfe.kicad_sch-bak  Mcu.kicad_sch  Mcu.kicad_sch-bak  PowerSources.kicad_sch  PowerSources.kicad_sch-bak  SynchronousRectifier.kicad_sch  WaveUltrasonics.kicad_pcb  WaveUltrasonics.kicad_pcb-bak  WaveUltrasonics.kicad_prl  WaveUltrasonics.kicad_pro  WaveUltrasonics.kicad_sch  WaveUltrasonics.kicad_sch-bak  WaveUltrasonics.pro  ZeroCrossingDetector.kicad_sch  ZeroCrossingDetector.kicad_sch-bak  fp-info-cache  fp-lib-table
v1.1/Firmware/: Firmware.ioc  Makefile.backup
v1.1/Hardware/: GateDriveSupplies.kicad_sch  HBridge.kicad_sch  Mcu.kicad_sch-bak  (+17 more)
v1.3/: ideas.txt
(+147 files in other folders)
